# NBodySimulation

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  flake.nix  packages.nix
assets/: NormalDistConfigurration.webm  SphereConfiguration.webm
kernels/: GLinterop.cl  GLinterop_sol.cl  barnes_hut_update.cl  boundary_reduce.cl  boundary_reduce.hcl  brute_force_update.cl  build_tree.cl  build_tree.hcl  calculate_forces.cl  calculate_forces.hcl  collision_update.cl  common.hcl  copy_vertices.cl  init.cl  saturate_tree.cl  saturate_tree.hcl  sort.cl
shaders/: particle.geom  particle.vert
src/: BarnesHutConfig.cpp  BarnesHutConfig.h  CameraManipulator.cpp  CameraManipulator.h  ConfigLoader.cpp  ConfigLoader.h  ConfigSaver.cpp  ConfigSaver.h  GLUtils.hpp  ImGuiWidgets.cpp  ImGuiWidgets.h  KernelLogger.cpp  KernelLogger.h  MyApp.cpp  MyApp.h  SimulationConfig.cpp  SimulationConfig.h  SimulationUIConfig.cpp  SimulationUIConfig.h  gShaderProgram.cpp  gShaderProgram.h  gTimer.h  main.cpp  oclutils.hpp  utils.h
